--- a/src/components/button.module.css
+++ b/src/components/button.module.css
@@ -8,12 +8,14 @@
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   border: none;
   border-radius: 4px;
-  background: linear-gradient(135deg, #6e8efb, #a777e3);
+  background: #663399;
+  /* background: linear-gradient(135deg, #6e8efb, #a777e3); */
 }
 
 .button:hover {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  background: rgb(74, 115, 236);
+  opacity: 0.8;
+  /* background: rgb(74, 115, 236); */
 }
 
 .button:focus {
