--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,24 +1,35 @@
 .header {
   background: whitesmoke;
-  margin-bottom: 1.45rem;
   height: 15rem;
   display: flex;
 }
 
 .headerRow {
-  padding: 0 5rem 5rem 5rem;
+  padding: 0 20rem 5rem;
   flex: 1;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-h2 {
+.headerName {
+  color: #663399;
+  font-weight: 400;
   margin: 0;
 }
 
-@media only screen and (min-width: 1440px) {
+@media only screen and (max-width: 1440px) {
   .headerRow {
-    padding: 0 20rem 5rem 20rem;
+    padding: 0 5rem 5rem;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .header {
+    height: 10rem;
+  }
+
+  .headerRow {
+    padding: 0 1rem;
   }
 }
